fixed spelling error / added hover effect for scrollbars

--- a/static/style.css
+++ b/static/style.css
@@ -180,6 +180,10 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
 }
 
+body::-webkit-scrollbar-thumb:hover {
+    background: #36394580;
+}
+
 body {
     background: #f7f9fd;
     padding: 0;
@@ -335,6 +339,10 @@ label {
 .menubardiv::-webkit-scrollbar-thumb {
     background: #36394550;
     width: 100%;
+}
+
+.menubardiv::-webkit-scrollbar-thumb:hover {
+    background: #36394580;
 }
 
 .menubardiv h3 {
